--- a/Ejercicio_1y2/polls/templates/polls/index.html
+++ b/Ejercicio_1y2/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
-
+<h2>Lorenzo Martinez Agudo y Raúl Navarro</h2>
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
